# peps

./: .gitignore  Cargo.toml  README.md  settings.gradle.kts
examples/: basic.peps
ide/: build.gradle.kts  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
ide/.tmp-emoji-debug/: emojiAutocomplete.js
ide/src/: App.test.tsx  App.tsx  api.ts  emojiAutocomplete.test.ts  emojiAutocomplete.ts  examples.ts  pepsLanguage.ts  styles.css  vite-env.d.ts
ide/src/components/: EditorPane.tsx  OutputPanel.tsx  Toolbar.tsx
ide/src/main/java/: module-info.java
ide/src/main/java/com/github/yuyu/: IdeMain.java  SplashScreen.java
ide/src/main/resources/com/github/yuyu/web/: editor.css  (+1 more)
interpreter/: build.gradle.kts
interpreter/src/main/java/com/github/yuyu/: InterpreterMain.java
scripts/: build-run.ps1  build-run.sh  build-standalone.ps1  build-standalone.sh  build-windows.sh
scripts/compiler/: build.ps1  build.sh
scripts/ide/: build.ps1  build.sh
src/: ast.rs  backend.rs  bytecode.rs  common.rs  compiler.rs  diagnostic.rs  frontend.rs  ide.rs  lexer.rs  lib.rs  main.rs  middle_end.rs  parser.rs  runtime.rs  semantic.rs  source.rs  symbol_table.rs  token.rs  types.rs  vm.rs
src/backend/: bytecode.rs  compiler.rs
src/common/: diagnostic.rs  source.rs
src/frontend/: ast.rs  lexer.rs  parser.rs  token.rs
src/ide/: missing_frontend.html  server.rs
src/middle_end/: semantic.rs  symbol_table.rs  types.rs
src/runtime/: vm.rs
tests/: compiler_tests.rs  lexer_tests.rs  parser_tests.rs  semantic_tests.rs  vm_tests.rs
