[package]
name = "peps"
version = "0.1.9"
edition = "2021"
default-run = "peps"

[dependencies]
anyhow = "1"
axum = "0.7"
open = "5.3.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
unicode-segmentation = "1"
